<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_fundoCadastro"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fundoqadastro" />

    <TextView
        android:id="@+id/log_txt_1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/logTitulo"
        android:textAlignment="center"
        android:textColor="#22D64D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_login" />

    <TextView
        android:id="@+id/log_txt_3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:labelFor="@id/inp_email"
        android:text="@string/cadTxt3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_txt_1" />

    <EditText
        android:id="@+id/inp_email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/round_input_white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:text="@string/logInp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/img_login"
        app:layout_constraintTop_toBottomOf="@+id/log_txt_3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/log_txt_5"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@id/inp_password"
        android:text="@string/cadTxt5"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_email" />

    <EditText
        android:id="@+id/inp_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/round_input_white"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:text="@string/logInp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_txt_5"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/cad_btn_cadastro"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_btn_primary"
        android:text="@string/log_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_password"
        tools:ignore="TextContrastCheck" />

</android.support.constraint.ConstraintLayout>