<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_text_nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="30dp"
            android:text="@string/home_text_name"
            android:textAlignment="viewStart"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/home_text_saudacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:text="@string/home_text_saudacao"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_text_nome" />

        <Button
            android:id="@+id/home_btn_agenda"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/home_agenda"
            android:contentDescription="@string/nav_btn_agenda_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_text_saudacao"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/home_btn_receitas"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/home_receitas"
            android:contentDescription="@string/nav_btn_receitas_txt"
            app:layout_constraintEnd_toStartOf="@+id/home_btn_profissionais"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_btn_agenda"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/home_btn_profissionais"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/home_profissionais"
            android:contentDescription="@string/nav_btn_profissionais_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/home_btn_receitas"
            app:layout_constraintTop_toBottomOf="@+id/home_btn_agenda" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/home_img_descricao"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/bg_home_fundo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/home_img_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="#008228"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/nav_btn_home"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_baseline_home_24"
            android:contentDescription="@string/nav_btn_home_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nav_btn_agenda"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nav_btn_agenda"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_baseline_calendar_month_24"
            android:contentDescription="@string/nav_btn_agenda_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nav_btn_novo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nav_btn_home"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nav_btn_novo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_baseline_add_box_24"
            android:contentDescription="@string/nav_btn_novo_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nav_btn_receitas"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nav_btn_agenda"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nav_btn_receitas"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_baseline_menu_book_24"
            android:contentDescription="@string/nav_btn_receitas_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nav_btn_perfil"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nav_btn_novo"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/nav_btn_perfil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/nav_btn_meusdados_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nav_btn_receitas"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>